--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NgomaHit",
+  "name": "ngomahit",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,14 +22,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^9.1.2",
     "@nestjs/platform-express": "^8.0.0",
+    "@prisma/client": "^3.6.0",
     "apollo-server-express": "^3.5.0",
     "graphql": "^15",
     "reflect-metadata": "^0.1.13",
-    "@prisma/client": "^3.6.0",
     "rimraf": "^3.0.2",
+    "bcrypt": "^5.0.1",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
@@ -40,6 +42,11 @@
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
+    "@nestjs/passport": "^8.0.1",
+    "@nestjs/jwt": "^8.0.0",
+    "@types/passport-jwt": "^3.0.6",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
@@ -47,13 +54,14 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
+    "@types/bcrypt": "^5.0.0",
+    "prisma": "^3.6.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "prisma": "^3.6.0",
     "typescript": "^4.3.5"
   },
   "jest": {
